# fastapi-data-demo

./: .gitignore  Dockerfile  README.md  data_module.py  main.py  pyproject.toml
